# ParallelPixels

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.sh  image.py  main.c
pipeline/chunking/include/: directory_monitor.h  file_tracker.h  image_chunker.h  image_queue.h
pipeline/chunking/src/: directory_monitor.c  file_tracker.c  image_chunker.c  image_queue.c
pipeline/filter/include/: filter.h
pipeline/filter/src/: chunk_threader.c  filter.c
pipeline/reconstruction/: image_unchunk.c  image_unchunk.h  reconstruction.c  reconstruction.h
shared/: Object.c  Object.h  darray.c  darray.h  dict.c  dict.h  dlist.c  dlist.h  image.c  image.h  macros.h  thread_pool.c  thread_pool.h
